[gd_scene load_steps=12 format=3 uid="uid://dvdhdbow6x8ct"]

[ext_resource type="Script" path="res://tutorial_scene.gd" id="1_m8u8i"]
[ext_resource type="PackedScene" uid="uid://b775pu2tewsti" path="res://Level1.tscn" id="2_wegy7"]
[ext_resource type="Texture2D" uid="uid://bdo1mv8go4mcp" path="res://health_bar_under.png" id="3_xb5h6"]
[ext_resource type="Texture2D" uid="uid://cjel7dribi7es" path="res://health_bar_over.png" id="4_ff45f"]
[ext_resource type="Texture2D" uid="uid://cy2mqfgrxuond" path="res://health_bar_progress.png" id="5_451uf"]
[ext_resource type="Texture2D" uid="uid://dbfq2tnuekfyq" path="res://background.png" id="6_au54i"]
[ext_resource type="PackedScene" uid="uid://bp36j34ns613y" path="res://PlayerCharacter.tscn" id="7_8co2p"]
[ext_resource type="Script" path="res://audio_library.gd" id="8_1lt2q"]
[ext_resource type="AudioStream" uid="uid://wubprmrj3x8o" path="res://levelend.wav" id="9_hot5q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k6ewh"]
radius = 152.398

[sub_resource type="CircleShape2D" id="CircleShape2D_b1np0"]
radius = 50.0899

[node name="GameplayScene" type="Node"]
script = ExtResource("1_m8u8i")
next_level = ExtResource("2_wegy7")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 100.0
offset_bottom = 100.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
max_value = 3.0
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 160
stretch_margin_right = 80
texture_under = ExtResource("3_xb5h6")
texture_over = ExtResource("4_ff45f")
texture_progress = ExtResource("5_451uf")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_au54i")

[node name="PlayerCharacter" parent="." instance=ExtResource("7_8co2p")]
position = Vector2(496, 238)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 375.0
offset_top = 157.0
offset_right = 635.0
offset_bottom = 213.0
bbcode_enabled = true
text = "	Travel on top of the planet
(Move with WASD / Arrow Keys)"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(887, 470)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-11, -1)
shape = SubResource("CircleShape2D_k6ewh")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(93, 119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(4, 1)
shape = SubResource("CircleShape2D_b1np0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 424.0
offset_top = 243.0
offset_right = 570.0
offset_bottom = 283.0
bbcode_enabled = true
text = "[wave amp=50.0 freq=25.0 connected=1]LEVEL 0 COMPLETE[/wave]"
fit_content = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(424, 243)
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="AudioLibrary" type="Node" parent="."]
script = ExtResource("8_1lt2q")

[node name="jingle" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource("9_hot5q")

[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="hurt" from="PlayerCharacter" to="." method="_on_player_character_hurt"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
